--- a/Patrik_Lima/Projeto 01/Index.html
+++ b/Patrik_Lima/Projeto 01/Index.html
@@ -2,19 +2,21 @@
 
 <html><meta charset="utf-8">
       <head>
+        <body style="background-color: black;">
         <img src="imagens/trap-1280x700.jpg" height="45%" width="100%"></>
          <h1 style="color: azure;" align="center">Curiosidade Sobre o Matuê!</h1>
 
       </head>
 
-      <body style="background-color: black;">
+      
         
          <h2 style="color: azure;" align="center">Matheus Brasileiro Aguiar, Mais Conhecido como Matuê tem 29 Anos, nascido em 11 de outubro de 1993,<br> Seu Ultimo e mais Novo Sucesso Segue arrasando nas radio de todo brasil</h2>
          <br>
-        <h2 style="color: azure;">Matuê - Conexões de Máfia feat. Rich the Kid</h2> 
+        <a href="https://youtu.be/rGHJ0mqean4"><h2 style="color: brown;">Matuê - Conexões de Máfia feat. Rich the Kid</h2></a>
         <br>
         <img src="imagens/matue-fotorenanpinheiro.webp" height="28%" width="14%"></body> >
         <iframe src="https://www.youtube.com/embed/QgMEH5W0pDI" align="center" frameborder="0" width="420" height="315"></iframe>
+       <a href="TrapInfo.html"><h2 style="color: blue;">Para mais informções da trapinfo </h2></a>
       </body>
 
 
