--- a/Patrik_Lima/Projeto 01/TrapInfo.html
+++ b/Patrik_Lima/Projeto 01/TrapInfo.html
@@ -6,22 +6,28 @@
 <body style="background-color: black;">
    <img src="imagens/trap-1280x700.jpg" height="45%" width="100%">
 
-   <center>    <h1 style="color: aliceblue;"><p>tudo sobre trap nacional</p></h1></center>
-    <br>
-    <center><h2 style="color: azure;"> Conhecer Mais Sobre o Traper Mais Vito nos Ultimos tempos</h2>
-    <h2 style="color: brown;"><a href="Index.html">Curiosidade Sobre o Matuê!</a></h2>
-    < <img src="imagens/matue-fotorenanpinheiro.webp" height="15%" width="10%"><center></center>
-    <br>
-    <h2 style="color: azure;"> Racionais Lança Livro</h2>
-   <h2> <a href="Livros.html">Clique Para Ver o Livro</a></h2>
-   <img src="imagens/71peoM4V0lL.jpg" height="15%" width="10%">
+   <center>
+      <h1 style="color: aliceblue;">
+         <p>tudo sobre trap nacional</p>
+      </h1>
+   </center>
    <br>
-   <h2 style="color: azure;">Donos da Paginas</h2>
-<h2><a href="Autores.html">Clique</a></h2>
-<br>
-<h2 style="color: azure;">Estamos Contratando</h2>
-<h2><a href="Autores.html">Para saber os requisitos</a></h2>
+   <center>
+      <h2 style="color: azure;"> Conhecer Mais Sobre o Traper Mais Vito nos Ultimos tempos</h2>
+      <h2 style="color: brown;"><a href="Index.html">Curiosidade Sobre o Matuê!</a></h2>
+      <img src="imagens/matue-fotorenanpinheiro.webp" height="15%" width="10%">
 
+      <br>
+      <h2 style="color: azure;"> Racionais Lança Livro</h2>
+      <h2> <a href="Livros.html">Clique Para Ver o Livro</a></h2>
+      <img src="imagens/71peoM4V0lL.jpg" height="15%" width="10%">
+      <br>
+      <h2 style="color: azure;">Donos da Paginas</h2>
+      <h2><a href="Autores.html">Clique</a></h2>
+      <br>
+      <h2 style="color: azure;">Estamos Contratando</h2>
+      <h2><a href="Autores.html">Para saber os requisitos</a></h2>
+   </center>
 
 </body>
 </head>
