--- a/Patrik_Lima/Projeto 01/Livros.html
+++ b/Patrik_Lima/Projeto 01/Livros.html
@@ -1,18 +1,27 @@
 <html>
-    <head>
-        <body style="background-color: black;">
-            <img src="imagens/trap-1280x700.jpg" height="45%" width="100%"></>
-            <br>
-            
-            <img src="imagens/71peoM4V0lL.jpg" height="29%" width="14%">
-            <h2 style="color: azure;">O que tem no livro Sobrevivendo no Inferno?</h2>
-            <br>
-           <h3 style="color: azure;">Sobrevivendo no inferno é a imagem mais bem-acabada de uma sociedade genocida que se tornou humanamente inviável, e uma tentativa radical,</h3>
-             <h3 style="color: azure;"> esteticamente brilhante, de sobreviver a ela. O texto almeja partilhar uma sabedoria construída coletivamente pela periferia, integrando-a à vivência dos sujeitos.</h3>
-<a href="https://www.amazon.com.br/Sobrevivendo-no-inferno-Racionais-Mcs/dp/8535931732">Clique se quiser garantir o seu</a>
+
+<head>
+
+<body style="background-color: black;">
+    <img src="imagens/trap-1280x700.jpg" height="45%" width="100%"></>
+    <br>
+
+    <img src="imagens/71peoM4V0lL.jpg" height="29%" width="14%">
+    <h2 style="color: azure;">O que tem no livro Sobrevivendo no Inferno?</h2>
+    <br>
+    <h3 style="color: azure;">Sobrevivendo no inferno é a imagem mais bem-acabada de uma sociedade genocida que se
+        tornou humanamente inviável, e uma tentativa radical,</h3>
+    <h3 style="color: azure;"> esteticamente brilhante, de sobreviver a ela. O texto almeja partilhar uma sabedoria
+        construída coletivamente pela periferia, integrando-a à vivência dos sujeitos.</h3>
+    <a href="https://www.amazon.com.br/Sobrevivendo-no-inferno-Racionais-Mcs/dp/8535931732">Clique se quiser garantir o
+        seu</a>
+
+    <a href="TrapInfo.html">
+        <h2 style="color: blue;">Para mais informções da trapinfo </h2>
 
 
-        </body>
+</body>
 
-    </head>
+</head>
+
 </html>
