--- a/Patrik_Lima/Projeto 01/Index.html
+++ b/Patrik_Lima/Projeto 01/Index.html
@@ -12,7 +12,8 @@
 
 
       <h2 style="color: azure;" align="center">Matheus Brasileiro Aguiar, Mais Conhecido como Matuê tem 29 Anos, nascido
-            em 11 de outubro de 1993,<br> Seu Ultimo e mais Novo Sucesso Segue arrasando nas radio de todo brasil</h2>
+            em 11 de outubro de 1993,<br> Seu Ultimo e mais Novo Sucesso Segue arrasando nas radio de todo brasil,</h2>
+
       <br>
       <a href="https://youtu.be/rGHJ0mqean4">
             <h2 style="color: brown;">Matuê - Conexões de Máfia feat. Rich the Kid</h2>
@@ -22,10 +23,36 @@
 </body> >
 <iframe src="https://www.youtube.com/embed/QgMEH5W0pDI" align="center" frameborder="0" width="420"
       height="315"></iframe>
-<a href="TrapInfo.html">
-      <h2 style="color: blue;">Para mais informções da trapinfo </h2>
-</a>
-</body>
+
+<li>
+      <h2 style="color: azure;" align="center">Matuê nasceu em Fortaleza, capital do Ceará. Durante sua infância, aos
+            oito
+            <strong>
+<li> anos de idade, se mudou com seus
+      pais para Oakland, cidade localizada no estado da Califórnia, nos Estados Unidos. Ficando por três anos no
+      país, conseguiu se tornar fluente em língua inglesa, até voltar para o Brasil em 2004, aos 11 anos de idade
+
+
+      Estudando em escola pública, Matuê começou a ter contato e se interessar pelo mundo do Rap, mas ainda na sua
+      adolescência passou por momentos difíceis após perder sua avó, que era uma pessoa que sempre apoiava ele.[6]
+      Ele começou a trabalhar como vendedor em uma loja de roupas de um shopping e depois de um tempo,
+      aproveitando sua experiência com a língua inglesa, virou professor particular de inglês. Foi com esse
+      emprego que ele conseguiu juntar um dinheiro para começar a investir na sua carreira musical</h2>
+</li></strong>
+<br>
+<h2 style="color: azure;"> "Foi um privilégio muito grande. Me abriu muitas portas e me possibilitou a dar iniciativa na minha caminhada musical. O
+outro ponto é que vi a importância do rap lá nos EUA e vi que poderia fazer isso aqui”, diz Matuê sobre o tempo que
+passou nos Estados Unidos".Disse Matuê</h2>
+<br>
+<li><h2 style="color: azure;">Juntamente com Clara Mendes e Lucas Degas, fundou a gravadora e produtora 30PRAUM em 2014.
+
+      Em 27 de setembro de 2021, Matuê revelou que se tornou pai durante a pandemia, sem dar muitos detalhes sobre.</h2></li>
+      <br>
+<center><a href="TrapInfo.html">
+            <h2 style="color: blue;">Para mais informções da trapinfo </h2>
+            <center></center>
+      </a>
+      </body>
 
 
 </html>
