--- a/Patrik_Lima/Projeto 01/TrapInfo.html
+++ b/Patrik_Lima/Projeto 01/TrapInfo.html
@@ -26,7 +26,7 @@
       <h2><a href="Autores.html">Clique</a></h2>
       <br>
       <h2 style="color: azure;">Estamos Contratando</h2>
-      <h2><a href="Autores.html">Para saber os requisitos</a></h2>
+      <h2><a href="Contato.html">Para saber os requisitos</a></h2>
    </center>
 
 </body>
