--- a/Patrik_Lima/Projeto 01/Index.html
+++ b/Patrik_Lima/Projeto 01/Index.html
@@ -5,7 +5,15 @@
 
 <body style="background-color: black;">
       <img src="imagens/trap-1280x700.jpg" height="45%" width="100%"></>
-      <h1 style="color: azure;" align="center">Curiosidade Sobre o Matuê!</h1>
+      <h1 style="color: azure;" align="center"> Curiosidade Sobre o Matuê!</h1>
+      <br>
+      <nav>
+            <ul>
+                  <center>
+                        <li><a href="#Biografia">Biografia</a> <a href="#Carreira musical">Carreira musical</a></li>
+                  </center>
+            </ul>
+      </nav>
 
       </head>
 
@@ -20,14 +28,16 @@
       </a>
       <br>
       <img src="imagens/matue-fotorenanpinheiro.webp" height="28%" width="14%">
+
 </body> >
-<iframe src="https://www.youtube.com/embed/QgMEH5W0pDI" align="center" frameborder="0" width="420"
-      height="315"></iframe>
+<center><iframe src="https://www.youtube.com/embed/QgMEH5W0pDI" frameborder="0" width="50%" height="45%"></iframe>
+</center>
 
 <li>
-      <h2 style="color: azure;" align="center">Matuê nasceu em Fortaleza, capital do Ceará. Durante sua infância, aos
-            oito
-            <strong>
+      <h2 style="color: azure;" align="center">
+            <section id="Biografia"> Matuê nasceu em Fortaleza, capital do Ceará. Durante sua infância, aos
+                  oito
+                  <strong>
 <li> anos de idade, se mudou com seus
       pais para Oakland, cidade localizada no estado da Califórnia, nos Estados Unidos. Ficando por três anos no
       país, conseguiu se tornar fluente em língua inglesa, até voltar para o Brasil em 2004, aos 11 anos de idade
@@ -40,14 +50,59 @@
       emprego que ele conseguiu juntar um dinheiro para começar a investir na sua carreira musical</h2>
 </li></strong>
 <br>
-<h2 style="color: azure;"> "Foi um privilégio muito grande. Me abriu muitas portas e me possibilitou a dar iniciativa na minha caminhada musical. O
-outro ponto é que vi a importância do rap lá nos EUA e vi que poderia fazer isso aqui”, diz Matuê sobre o tempo que
-passou nos Estados Unidos".Disse Matuê</h2>
+<h2 style="color: azure;"> "Foi um privilégio muito grande. Me abriu muitas portas e me possibilitou a dar iniciativa na
+      minha caminhada musical. O
+      outro ponto é que vi a importância do rap lá nos EUA e vi que poderia fazer isso aqui”, diz Matuê sobre o tempo
+      que
+      passou nos Estados Unidos".Disse Matuê</h2>
 <br>
-<li><h2 style="color: azure;">Juntamente com Clara Mendes e Lucas Degas, fundou a gravadora e produtora 30PRAUM em 2014.
+<center><img src="imagens/OIP (1).jpg" height="25%" width="25%"></center>
+<li>
+      <h2 style="color: azure;">Juntamente com Clara Mendes e Lucas Degas, fundou a gravadora e produtora 30PRAUM em
+            2014.
 
-      Em 27 de setembro de 2021, Matuê revelou que se tornou pai durante a pandemia, sem dar muitos detalhes sobre.</h2></li>
-      <br>
+            Em 27 de setembro de 2021, Matuê revelou que se tornou pai durante a pandemia, sem dar muitos detalhes
+            sobre.</h2>
+      </section>
+</li>
+<li>
+      <h2 style="color: azure;">
+            <section id="Carreira musical">
+                  Carreira musical
+                  <br>
+                  Matuê iniciou sua carreira em 2015, lançando seu primeiro e único mixtape de reggae, chamado Reggae,
+                  produzido
+                  pela 30PRAUM. Porém, o mixtape não fez sucesso e ele decidiu migrar para área do trap.[9]
+
+                  Em 2016, destacou-se na cena nacional já no seu primeiro lançamento de trap, "RBN", com um videoclipe
+                  de estética
+                  ímpar e enorme originalidade musical, o tornando característico pelo seu estilo harmônico vocal.
+
+                  Desde então, o artista e diretor criativo da 30PRAUM tem inovado a cada lançamento, superando suas
+                  produções
+                  anteriores e trazendo novas sonoridades. Sempre apresentando uma variedade de flows e harmonias,
+                  diferenciando a
+                  cada música mas sem perder a qualidade e originalidade. Matuê tem 3,5 milhões de ouvintes mensais no
+                  Spotify, seu
+                  álbum Máquina do Tempo já passa de 110 milhões de visualizações no YouTube em uma semana. Seu
+                  principal hit de
+                  2019, "Kenny G" já conta com mais de 208 milhões de visualizações.
+
+                  Em 2020, assinou contrato com a Sony Music, sob licença da 30PRAUM, o que significa que ele
+                  provavelmente ainda
+                  tem total comando de gestão da sua carreira.
+
+                  No dia 10 de setembro do mesmo ano, lançou seu primeiro álbum, Máquina do Tempo , com sete faixas num
+                  total de 19
+                  minutos e 32 segundos de música. Matuê impressionou a todos não apenas lançando a canção "Máquina do
+                  Tempo", que era a mais esperada por todos os fãs, como também lançou ainda uma espécie de faixa bônus
+                  dentro
+                  dela, intitulada de "A+".
+      </h2>
+</li>
+</section>
+<br>
+<h2></h2>
 <center><a href="TrapInfo.html">
             <h2 style="color: blue;">Para mais informções da trapinfo </h2>
             <center></center>
